Fix minutes for non-hour-aligned time zones. Also add Helvetica to font-family.

--- a/app/style.css
+++ b/app/style.css
@@ -3,7 +3,7 @@
 html, body {
   height: 100%;
   margin: 0;
-  font-family: "Trebuchet MS", sans-serif;
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
 }
 .draggable {
   -webkit-app-region: drag;
